--- a/hardware/c2000/flash_kernel/.cproject
+++ b/hardware/c2000/flash_kernel/.cproject
@@ -14,7 +14,7 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactExtension="out" artifactName="${ProjName}" buildProperties="" cleanCommand="${CG_CLEAN_CMD}" description="" id="com.ti.ccstudio.buildDefinitions.C2000.Debug.1515440499" name="Debug" parent="com.ti.ccstudio.buildDefinitions.C2000.Debug">
+				<configuration artifactExtension="out" artifactName="${ProjName}" buildProperties="" cleanCommand="${CG_CLEAN_CMD}" description="" id="com.ti.ccstudio.buildDefinitions.C2000.Debug.1515440499" name="Debug" parent="com.ti.ccstudio.buildDefinitions.C2000.Debug" postannouncebuildStep="Create SCI8 Boot Image" postbuildStep="&quot;${CG_TOOL_HEX}&quot; &quot;${BuildArtifactFileName}&quot; -boot -sci8 -a -o &quot;${BuildArtifactFileBaseName}.txt&quot;">
 					<folderInfo id="com.ti.ccstudio.buildDefinitions.C2000.Debug.1515440499." name="/" resourcePath="">
 						<toolChain id="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.DebugToolchain.617669301" name="TI Build Tools" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.DebugToolchain" targetTool="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.linkerDebug.139413479">
 							<option id="com.ti.ccstudio.buildDefinitions.core.OPT_TAGS.1917458695" superClass="com.ti.ccstudio.buildDefinitions.core.OPT_TAGS" valueType="stringList">
@@ -42,7 +42,7 @@
 									<listOptionValue builtIn="false" value="&quot;${CG_TOOL_ROOT}/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\Energia\hardware\c2000\cores\c2000&quot;"/>
 								</option>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.ASM_EXTENSION.243310829" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.ASM_EXTENSION" value="S" valueType="string"/>
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.ASM_EXTENSION.243310829" name="Extension for assembly files (default is .asm) (--asm_extension, -ea)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.ASM_EXTENSION" value="S" valueType="string"/>
 								<inputType id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compiler.inputType__C_SRCS.312971766" name="C Sources" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compiler.inputType__C_SRCS"/>
 								<inputType id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compiler.inputType__CPP_SRCS.337469841" name="C++ Sources" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compiler.inputType__CPP_SRCS"/>
 								<inputType id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compiler.inputType__ASM_SRCS.1346052242" name="Assembly Sources" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compiler.inputType__ASM_SRCS"/>
@@ -93,19 +93,19 @@
 								<listOptionValue builtIn="false" value="RUNTIME_SUPPORT_LIBRARY=libc.a"/>
 								<listOptionValue builtIn="false" value="OUTPUT_TYPE=executable"/>
 							</option>
-							<option id="com.ti.ccstudio.buildDefinitions.core.OPT_CODEGEN_VERSION.2120592995" superClass="com.ti.ccstudio.buildDefinitions.core.OPT_CODEGEN_VERSION" value="6.3.0.A13150" valueType="string"/>
+							<option id="com.ti.ccstudio.buildDefinitions.core.OPT_CODEGEN_VERSION.2120592995" name="Compiler version" superClass="com.ti.ccstudio.buildDefinitions.core.OPT_CODEGEN_VERSION" value="6.3.0.A13150" valueType="string"/>
 							<targetPlatform id="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.targetPlatformRelease.427070469" name="Platform" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.targetPlatformRelease"/>
-							<builder buildPath="${BuildDirectory}" id="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.builderRelease.267861935" name="GNU Make.Release" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.builderRelease"/>
+							<builder buildPath="${BuildDirectory}" id="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.builderRelease.267861935" keepEnvironmentInBuildfile="false" name="GNU Make" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.builderRelease"/>
 							<tool id="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.compilerRelease.1198190880" name="C2000 Compiler" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.compilerRelease">
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.LARGE_MEMORY_MODEL.1061985791" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.LARGE_MEMORY_MODEL" value="true" valueType="boolean"/>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.UNIFIED_MEMORY.1007337328" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.UNIFIED_MEMORY" value="true" valueType="boolean"/>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.SILICON_VERSION.860537040" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.SILICON_VERSION" value="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.SILICON_VERSION.28" valueType="enumerated"/>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DIAG_WARNING.1026974432" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DIAG_WARNING" valueType="stringList">
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.LARGE_MEMORY_MODEL.1061985791" name="Use large memory model (--large_memory_model, -ml)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.LARGE_MEMORY_MODEL" value="true" valueType="boolean"/>
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.UNIFIED_MEMORY.1007337328" name="Unified memory (--unified_memory, -mt)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.UNIFIED_MEMORY" value="true" valueType="boolean"/>
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.SILICON_VERSION.860537040" name="Processor version (--silicon_version, -v)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.SILICON_VERSION" value="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.SILICON_VERSION.28" valueType="enumerated"/>
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DIAG_WARNING.1026974432" name="Treat diagnostic &lt;id&gt; as warning (--diag_warning, -pdsw)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DIAG_WARNING" valueType="stringList">
 									<listOptionValue builtIn="false" value="225"/>
 								</option>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DISPLAY_ERROR_NUMBER.196120975" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DISPLAY_ERROR_NUMBER" value="true" valueType="boolean"/>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DIAG_WRAP.996106399" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DIAG_WRAP" value="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DIAG_WRAP.off" valueType="enumerated"/>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.INCLUDE_PATH.729992272" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.INCLUDE_PATH" valueType="includePath">
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DISPLAY_ERROR_NUMBER.196120975" name="Emit diagnostic identifier numbers (--display_error_number, -pden)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DISPLAY_ERROR_NUMBER" value="true" valueType="boolean"/>
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DIAG_WRAP.996106399" name="Wrap diagnostic messages (--diag_wrap)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DIAG_WRAP" value="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.DIAG_WRAP.off" valueType="enumerated"/>
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.INCLUDE_PATH.729992272" name="Add dir to #include search path (--include_path, -I)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compilerID.INCLUDE_PATH" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${CG_TOOL_ROOT}/include&quot;"/>
 								</option>
 								<inputType id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compiler.inputType__C_SRCS.1782987991" name="C Sources" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compiler.inputType__C_SRCS"/>
@@ -114,16 +114,16 @@
 								<inputType id="com.ti.ccstudio.buildDefinitions.C2000_6.3.compiler.inputType__ASM2_SRCS.1462552348" name="Assembly Sources" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.compiler.inputType__ASM2_SRCS"/>
 							</tool>
 							<tool id="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.linkerRelease.1334497283" name="C2000 Linker" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.exe.linkerRelease">
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.STACK_SIZE.71620288" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.STACK_SIZE" value="0x300" valueType="string"/>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.OUTPUT_FILE.1174003181" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.OUTPUT_FILE" value="&quot;${ProjName}.out&quot;" valueType="string"/>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.MAP_FILE.112484707" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.MAP_FILE" value="&quot;${ProjName}.map&quot;" valueType="string"/>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.DISPLAY_ERROR_NUMBER.1058267600" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.DISPLAY_ERROR_NUMBER" value="true" valueType="boolean"/>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.DIAG_WRAP.390814716" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.DIAG_WRAP" value="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.DIAG_WRAP.off" valueType="enumerated"/>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.SEARCH_PATH.2000412513" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.SEARCH_PATH" valueType="stringList">
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.STACK_SIZE.71620288" name="Set C system stack size (--stack_size, -stack)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.STACK_SIZE" value="0x300" valueType="string"/>
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.OUTPUT_FILE.1174003181" name="Specify output file name (--output_file, -o)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.OUTPUT_FILE" value="&quot;${ProjName}.out&quot;" valueType="string"/>
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.MAP_FILE.112484707" name="Input and output sections listed into &lt;file&gt; (--map_file, -m)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.MAP_FILE" value="&quot;${ProjName}.map&quot;" valueType="string"/>
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.DISPLAY_ERROR_NUMBER.1058267600" name="Emit diagnostic identifier numbers (--display_error_number)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.DISPLAY_ERROR_NUMBER" value="true" valueType="boolean"/>
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.DIAG_WRAP.390814716" name="Wrap diagnostic messages (--diag_wrap)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.DIAG_WRAP" value="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.DIAG_WRAP.off" valueType="enumerated"/>
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.SEARCH_PATH.2000412513" name="Add &lt;dir&gt; to library search path (--search_path, -i)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.SEARCH_PATH" valueType="stringList">
 									<listOptionValue builtIn="false" value="&quot;${CG_TOOL_ROOT}/lib&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${CG_TOOL_ROOT}/include&quot;"/>
 								</option>
-								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.LIBRARY.1096731725" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.LIBRARY" valueType="libs">
+								<option id="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.LIBRARY.1096731725" name="Include library file or command file as input (--library, -l)" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.linkerID.LIBRARY" valueType="libs">
 									<listOptionValue builtIn="false" value="&quot;libc.a&quot;"/>
 								</option>
 								<inputType id="com.ti.ccstudio.buildDefinitions.C2000_6.3.exeLinker.inputType__CMD_SRCS.615539276" name="Linker Command Files" superClass="com.ti.ccstudio.buildDefinitions.C2000_6.3.exeLinker.inputType__CMD_SRCS"/>
