--- a/hardware/c2000/test_project/.project
+++ b/hardware/c2000/test_project/.project
@@ -26,6 +26,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>Device_I2C.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/cores/c2000/Device_I2C.cpp</locationURI>
+		</link>
+		<link>
 			<name>F28027.cmd</name>
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/cores/c2000/f2802x_common/cmd/F28027.cmd</locationURI>
@@ -109,11 +114,6 @@
 			<name>twi.c</name>
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/cores/c2000/twi.c</locationURI>
-		</link>
-		<link>
-			<name>usci_isr_handler.c</name>
-			<type>1</type>
-			<locationURI>PARENT-1-PROJECT_LOC/cores/c2000/usci_isr_handler.c</locationURI>
 		</link>
 		<link>
 			<name>wiring.c</name>
