--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry excluding="processing/app/tools/format/|processing/app/tools/format/src/|processing/app/Trace.java|processing/app/RunnerClassLoader.java" kind="src" path="app/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/processing-core"/>
+	<classpathentry combineaccessrules="false" kind="src" path="core/src"/>
 	<classpathentry kind="lib" path="app/lib/antlr.jar"/>
 	<classpathentry kind="lib" path="app/lib/apple.jar"/>
 	<classpathentry kind="lib" path="app/lib/ecj.jar"/>
