Fixed bug in serial loader to enable use of COM ports 10 and up

--- a/hardware/c2000/serial_loader2000/serial_loader2000/serial_loader2000.vcxproj
+++ b/hardware/c2000/serial_loader2000/serial_loader2000/serial_loader2000.vcxproj
@@ -65,6 +65,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
